# stratus

./: Cargo.toml  README.md  build.sh
docs/: data_structures.md
src/: archive.rs  containers.rs  data.rs  discover.rs  filesystem.rs  fixes.rs  hash_interner.rs  kirby_copy.rs  lib.rs  logger.rs  menu.rs  mount_save.rs  nvn.rs  packages.rs
src/menu/: envy.rs  font.rs  shaders.rs
src/nvn/: abstraction.rs
