[package]
name = "stratus-mod-loader"
version = "0.1.0"
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = { version = "2.9.2", features = ["bytemuck"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
camino = "1.1.11"
flate2 = "1.1.2"
log = "0.4.27"
paste = "1.0.15"
rawzip = "0.4.1"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
smash-hash = { git = "https://github.com/blu-dev/smash-hash" }
stats_alloc = "0.1.10"
# smash-hash = { path = "../smash-hash/smash-hash" }

[features]
sanity_checks = []
verbose_logging = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
